search bar on left, removed cartegories from navabar, fixed the signin/signout on mobile

--- a/app/assets/stylesheets/layout/_navbar.scss
+++ b/app/assets/stylesheets/layout/_navbar.scss
@@ -71,7 +71,7 @@
 .navbar-socialive-right {
   display: flex;
   align-items: center;
-  justify-content: space-between;
+  justify-content: flex-end;
 }
 
 /* Navbar item */
